@@ -62,6 +62,23 @@ public class StdLasso extends StdWeapon
 	}
 
 	@Override
+	public boolean okMessage(final Environmental myHost, final CMMsg msg)
+	{
+		if(!super.okMessage(myHost, msg))
+			return false;
+		if((msg.tool()==this)
+		&&(msg.targetMinor()==CMMsg.TYP_DAMAGE)
+		&&(msg.value()>0)
+		&&(msg.target() !=null)
+		&&(msg.target() instanceof MOB)
+		&&(weaponClassification()==Weapon.CLASS_THROWN))
+		{
+			msg.setValue(0);
+		}
+		return true;
+	}
+	
+	@Override
 	public void executeMsg(final Environmental myHost, final CMMsg msg)
 	{
 		if((msg.tool()==this)
