@@ -26,6 +26,8 @@
   25. Papermaking now supports containers, for gift bags, paper sacks, etc.
   26. MORGUE/DEATH/BODY/START rooms support levels and masks now.
   27. The Swim skill, when used as a racial ability, does not have a usage cost any more.
+  28. Lassos and Nets no longer do physical damage
+  
 # Build 5.9.3 Released 05/08/2016
    1. Follower behavior now has a few more options.
    2. STAT [MOBNAME] will now give full editor stats also, and 
